[gd_scene load_steps=2 format=3 uid="uid://cebo17nsn5lij"]

[ext_resource type="Script" uid="uid://duptxv0hwgyyk" path="res://scripts/scenes/PayoutScene.gd" id="1_payout"]

[node name="PayoutScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_payout")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.05, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
text = "БАНКИР"

[node name="StakeLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
text = "Ставка: 200"

[node name="AmountPanel" type="Panel" parent="MarginContainer/VBoxContainer/HeaderHBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2

[node name="CollectedAmountLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox/AmountPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HintButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderHBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "?"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Очки: 10"

[node name="MainPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MainMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ChipStacksContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MainPanel/MainMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="FleetPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="FleetMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/FleetPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="FleetHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FleetPanel/FleetMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ChipFleetContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FleetPanel/FleetMargin/FleetHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PayoutButton" type="Button" parent="MarginContainer/VBoxContainer/FleetPanel/FleetMargin/FleetHBox"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Выплатить"

[node name="FeedbackContainer" type="CenterContainer" parent="."]
z_index = 100
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FeedbackLabel" type="Label" parent="FeedbackContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]
offset = Vector2(0, 50)
transform = Transform2D(1, 0, 0, 1, 0, 50)

[node name="ToastContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
mouse_filter = 2
