# res://scripts/scenes/PayoutScene.gd
# ĞÑ‚Ğ´ĞµĞ»ÑŒĞ½Ğ°Ñ ÑÑ†ĞµĞ½Ğ° Ğ´Ğ»Ñ Ñ€Ğ°ÑÑ‡Ñ‘Ñ‚Ğ° Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ñ‹ Ñ Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ¸ĞµĞ¼ Ñ„Ğ¸ÑˆĞµĞº
# Ğ˜ÑĞ¿Ğ¾Ğ»ÑŒĞ·ÑƒĞµÑ‚ Ğ¼Ğ¾Ğ´ÑƒĞ»ÑŒĞ½ÑƒÑ Ğ°Ñ€Ñ…Ğ¸Ñ‚ĞµĞºÑ‚ÑƒÑ€Ñƒ: ChipStack, ChipStackManager, PayoutValidator

extends Control

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# UI Ğ­Ğ›Ğ•ĞœĞ•ĞĞ¢Ğ« (Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ½Ñ‹Ğµ Ğ¿ÑƒÑ‚Ğ¸)
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

@onready var result_label = $MarginContainer/VBoxContainer/HeaderHBox/ResultLabel
@onready var stake_label = $MarginContainer/VBoxContainer/HeaderHBox/StakeLabel
@onready var amount_panel = $MarginContainer/VBoxContainer/HeaderHBox/AmountPanel
@onready var collected_amount_label = $MarginContainer/VBoxContainer/HeaderHBox/AmountPanel/CollectedAmountLabel
@onready var payout_button = $MarginContainer/VBoxContainer/HeaderHBox/PayoutButton
@onready var hint_button = $MarginContainer/VBoxContainer/HeaderHBox/HintButton
@onready var score_label = %ScoreLabel
@onready var main_panel = %MainPanel
@onready var chip_stacks_container = %ChipStacksContainer
@onready var fleet_panel = %FleetPanel
@onready var chip_fleet_container = %ChipFleetContainer
@onready var feedback_label = %FeedbackLabel
@onready var feedback_container = $FeedbackContainer

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ğ¡Ğ˜Ğ“ĞĞĞ›Ğ«
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

signal payout_confirmed(is_correct: bool, collected: float, expected: float)
signal hint_used()

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞœĞĞ”Ğ£Ğ›Ğ˜
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

var stack_manager: ChipStackManager  # Ğ£Ğ¿Ñ€Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğµ ÑÑ‚Ğ¾Ğ¿ĞºĞ°Ğ¼Ğ¸ Ñ„Ğ¸ÑˆĞµĞº
var validator: PayoutValidator       # Ğ’Ğ°Ğ»Ğ¸Ğ´Ğ°Ñ†Ğ¸Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ñ‹

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞŸĞ•Ğ Ğ•ĞœĞ•ĞĞĞ«Ğ•
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

var chip_denominations: Array = []  # ĞĞ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº (Ğ¸Ğ· GameModeManager)
var current_stake: float = 0.0      # Ğ¢ĞµĞºÑƒÑ‰Ğ°Ñ ÑÑ‚Ğ°Ğ²ĞºĞ°
var current_winner: String = ""     # "Player", "Banker", "Tie"
var expected_payout: float = 0.0    # ĞĞ¶Ğ¸Ğ´Ğ°ĞµĞ¼Ğ°Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°
var is_button_blocked: bool = false # Ğ‘Ğ»Ğ¾ĞºĞ¸Ñ€Ğ¾Ğ²ĞºĞ° ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ¿Ñ€Ğ¸ Ğ¾ÑˆĞ¸Ğ±ĞºĞµ

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ğ˜ĞĞ˜Ğ¦Ğ˜ĞĞ›Ğ˜Ğ—ĞĞ¦Ğ˜Ğ¯
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _ready():
	# Ğ¡Ğ¾Ğ·Ğ´Ğ°Ñ‘Ğ¼ Ğ¼Ğ¾Ğ´ÑƒĞ»Ğ¸
	stack_manager = ChipStackManager.new(chip_stacks_container)
	validator = PayoutValidator.new()

	# ĞŸĞ¾Ğ´Ğ¿Ğ¸ÑÑ‹Ğ²Ğ°ĞµĞ¼ÑÑ Ğ½Ğ° ÑĞ¾Ğ±Ñ‹Ñ‚Ğ¸Ñ
	stack_manager.total_changed.connect(_on_total_changed)
	stack_manager.stack_added.connect(_on_stack_added)
	GameModeManager.mode_changed.connect(_on_mode_changed)

	# ĞŸĞ¾Ğ»ÑƒÑ‡Ğ°ĞµĞ¼ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº
	_update_chip_denominations()

	# ĞĞ°ÑÑ‚Ñ€Ğ¾Ğ¹ĞºĞ° ÑÑ‚Ğ¸Ğ»ĞµĞ¹
	_setup_styles()

	# Ğ¡ĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€ Ğ¾Ğ±Ñ€Ğ°Ñ‚Ğ½Ğ¾Ğ¹ ÑĞ²ÑĞ·Ğ¸ Ğ¿Ğ¾ ÑƒĞ¼Ğ¾Ğ»Ñ‡Ğ°Ğ½Ğ¸Ñ
	feedback_container.visible = false

	# Ğ¡Ğ¾Ğ·Ğ´Ğ°Ñ‘Ğ¼ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ğ¾Ğ²
	_create_chip_buttons()

	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹ ĞºĞ½Ğ¾Ğ¿Ğ¾Ğº
	payout_button.pressed.connect(_on_payout_pressed)
	hint_button.pressed.connect(_on_hint_pressed)

	# Ğ—Ğ°Ğ³Ñ€ÑƒĞ¶Ğ°ĞµĞ¼ Ğ´Ğ°Ğ½Ğ½Ñ‹Ğµ Ğ¸Ğ· GameDataManager
	setup_payout(
		GameDataManager.payout_winner,
		GameDataManager.payout_stake,
		GameDataManager.payout_amount
	)

	# ĞĞ°ÑÑ‚Ñ€Ğ¾Ğ¹ĞºĞ° ĞºĞ»Ğ°Ğ²Ğ¸Ğ°Ñ‚ÑƒÑ€Ğ½Ğ¾Ğ¹ Ğ½Ğ°Ğ²Ğ¸Ğ³Ğ°Ñ†Ğ¸Ğ¸
	_setup_keyboard_navigation()

	# ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ Ğ¾Ñ‚Ğ¾Ğ±Ñ€Ğ°Ğ¶ĞµĞ½Ğ¸Ğµ Ğ¾Ñ‡ĞºĞ¾Ğ²
	_update_score_display()

func _unhandled_input(event: InputEvent):
	# ĞšĞ¾Ğ½Ñ‚ĞµĞºÑÑ‚Ğ½Ğ°Ñ ĞºĞ½Ğ¾Ğ¿ĞºĞ°: CardsButton â†’ Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ¸Ñ‚ÑŒ
	if event.is_action_pressed("CardsButton"):
		FocusManager.deactivate()
		payout_button.emit_signal("pressed")
		get_viewport().set_input_as_handled()

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞŸĞ£Ğ‘Ğ›Ğ˜Ğ§ĞĞ«Ğ• ĞœĞ•Ğ¢ĞĞ”Ğ«
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

# â† Ğ˜Ğ½Ğ¸Ñ†Ğ¸Ğ°Ğ»Ğ¸Ğ·Ğ°Ñ†Ğ¸Ñ ÑÑ†ĞµĞ½Ñ‹ Ñ Ñ€ĞµĞ·ÑƒĞ»ÑŒÑ‚Ğ°Ñ‚Ğ¾Ğ¼ Ñ€Ğ°ÑƒĞ½Ğ´Ğ°
func setup_payout(winner: String, stake: float, payout: float):
	current_winner = winner
	current_stake = stake
	expected_payout = payout

	# ĞÑ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ Ğ²ÑĞµ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	stack_manager.clear_all()

	# Ğ£ÑÑ‚Ğ°Ğ½Ğ°Ğ²Ğ»Ğ¸Ğ²Ğ°ĞµĞ¼ Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²Ğ¾Ğº Ğ¸ Ñ†Ğ²ĞµÑ‚
	_set_result_header(winner)

	# Ğ¡Ñ‚Ğ°Ğ²ĞºĞ° Ñ€ÑĞ´Ğ¾Ğ¼ Ñ Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²ĞºĞ¾Ğ¼
	stake_label.text = Localization.t("PAYOUT_STAKE", [_format_amount(stake)])

	# Ğ§Ğ¸ÑĞ»Ğ¾ Ğ² Ğ¿Ğ°Ğ½ĞµĞ»Ğ¸ (Ğ½Ğ°Ñ‡Ğ¸Ğ½Ğ°ĞµĞ¼ Ñ 0)
	collected_amount_label.text = "0"

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞĞ‘Ğ ĞĞ‘ĞĞ¢Ğ§Ğ˜ĞšĞ˜ Ğ¡ĞĞ‘Ğ«Ğ¢Ğ˜Ğ™
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° ĞºĞ»Ğ¸ĞºĞ° Ğ½Ğ° Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ» Ñ„Ğ¸ÑˆĞºĞ¸ (Ğ´Ğ¾Ğ±Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğµ)
func _on_chip_clicked(denomination: float):
	stack_manager.add_chip(denomination)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° Ğ¿Ñ€Ğ°Ğ²Ğ¾Ğ³Ğ¾ ĞºĞ»Ğ¸ĞºĞ° Ğ¿Ğ¾ ĞºĞ½Ğ¾Ğ¿ĞºĞµ Ñ„Ğ¸ÑˆĞºĞ¸ (ÑƒĞ´Ğ°Ğ»ĞµĞ½Ğ¸Ğµ)
func _on_chip_button_input(event: InputEvent, denomination: float):
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_RIGHT:
		stack_manager.remove_chip(denomination)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº Ğ´Ğ¾Ğ±Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ñ Ğ½Ğ¾Ğ²Ğ¾Ğ¹ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸ (Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ Ğ¾Ğ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº ĞºĞ»Ğ¸ĞºĞ¾Ğ²)
func _on_stack_added(stack: ChipStack, _index: int):
	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ Ğ¾Ğ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº ĞºĞ»Ğ¸ĞºĞ¾Ğ² Ğº ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€Ñƒ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	stack.container.gui_input.connect(_on_stack_clicked.bind(stack))

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° ĞºĞ»Ğ¸ĞºĞ° Ğ½Ğ° ÑÑ‚Ğ¾Ğ¿ĞºÑƒ (ÑƒĞ´Ğ°Ğ»ĞµĞ½Ğ¸Ğµ Ğ¸Ğ· Ğ¿Ğ¾ÑĞ»ĞµĞ´Ğ½ĞµĞ³Ğ¾ ÑÑ‚ĞµĞºĞ°)
func _on_stack_clicked(event: InputEvent, stack: ChipStack):
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
		stack_manager.remove_chip(stack.denomination)

# â† ĞĞ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ¸Ğµ ÑÑƒĞ¼Ğ¼Ñ‹ Ğ¿Ñ€Ğ¸ Ğ¸Ğ·Ğ¼ĞµĞ½ĞµĞ½Ğ¸Ğ¸ ÑÑ‚Ğ¾Ğ¿Ğ¾Ğº
func _on_total_changed(new_total: float):
	collected_amount_label.text = _format_amount(new_total)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° Ğ½Ğ°Ğ¶Ğ°Ñ‚Ğ¸Ñ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ "Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ¸Ñ‚ÑŒ"
func _on_payout_pressed():
	if is_button_blocked:
		return

	var collected_total = stack_manager.get_total()
	var is_correct = validator.validate(collected_total, expected_payout)

	# Ğ¡Ğ¾Ñ…Ñ€Ğ°Ğ½ÑĞµĞ¼ Ñ€ĞµĞ·ÑƒĞ»ÑŒÑ‚Ğ°Ñ‚ Ğ´Ğ»Ñ Ğ¿ĞµÑ€ĞµĞ´Ğ°Ñ‡Ğ¸ Ğ¾Ğ±Ñ€Ğ°Ñ‚Ğ½Ğ¾ Ğ² Game
	GameDataManager.set_payout_result(is_correct, collected_total, expected_payout)

	if is_correct:
		# â† ĞŸÑ€Ğ°Ğ²Ğ¸Ğ»ÑŒĞ½Ğ°Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°: +1 Ğ¾Ñ‡ĞºĞ¾ (Ñ‚Ğ¾Ğ»ÑŒĞºĞ¾ Ğ² Ğ¾Ğ±Ñ‹Ñ‡Ğ½Ğ¾Ğ¼ Ñ€ĞµĞ¶Ğ¸Ğ¼Ğµ)
		if not GameDataManager.is_survival_active:
			SaveManager.instance.add_score(1)
			_update_score_display()

		# ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ» Ğ² EventBus Ğ´Ğ»Ñ StatsManager
		EventBus.payout_correct.emit(collected_total, expected_payout)
		_show_success_animation()
	else:
		# â† ĞĞµĞ¿Ñ€Ğ°Ğ²Ğ¸Ğ»ÑŒĞ½Ğ°Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°
		# ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ» Ğ² EventBus Ğ´Ğ»Ñ StatsManager
		EventBus.payout_wrong.emit(collected_total, expected_payout)

		if GameDataManager.is_survival_active:
			# Ğ ĞµĞ¶Ğ¸Ğ¼ Ğ²Ñ‹Ğ¶Ğ¸Ğ²Ğ°Ğ½Ğ¸Ñ: Ğ¾Ñ‚Ğ½Ğ¸Ğ¼Ğ°ĞµĞ¼ Ğ¶Ğ¸Ğ·Ğ½ÑŒ
			GameDataManager.survival_lives -= 1
			_update_score_display()
			# ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ° Game Over (0 Ğ¶Ğ¸Ğ·Ğ½ĞµĞ¹)
			if GameDataManager.survival_lives <= 0:
				print("ğŸ® GAME OVER! Ğ—Ğ°ĞºĞ¾Ğ½Ñ‡Ğ¸Ğ»Ğ¸ÑÑŒ Ğ¶Ğ¸Ğ·Ğ½Ğ¸ Ğ¿Ğ¾ÑĞ»Ğµ Ğ½ĞµĞ¿Ñ€Ğ°Ğ²Ğ¸Ğ»ÑŒĞ½Ğ¾Ğ¹ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ñ‹")
				# Ğ¡Ñ€Ğ°Ğ·Ñƒ Ğ²Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµĞ¼ÑÑ Ğ² Ğ¸Ğ³Ñ€Ñƒ Ğ´Ğ»Ñ Ğ¾Ğ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ¸ Game Over
				_return_to_game()
				return
		else:
			# ĞĞ±Ñ‹Ñ‡Ğ½Ñ‹Ğ¹ Ñ€ĞµĞ¶Ğ¸Ğ¼: Ğ¾Ñ‚Ğ½Ğ¸Ğ¼Ğ°ĞµĞ¼ Ğ¾Ñ‡ĞºĞ¸
			var game_over = SaveManager.instance.subtract_score(1)
			_update_score_display()
			if game_over:
				print("ğŸ® GAME OVER! ĞÑ‡ĞºĞ¸ ÑƒĞ¿Ğ°Ğ»Ğ¸ Ğ½Ğ¸Ğ¶Ğµ 0 Ğ¿Ğ¾ÑĞ»Ğµ Ğ½ĞµĞ¿Ñ€Ğ°Ğ²Ğ¸Ğ»ÑŒĞ½Ğ¾Ğ¹ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ñ‹")
				# Ğ¡Ñ€Ğ°Ğ·Ñƒ Ğ²Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµĞ¼ÑÑ Ğ² Ğ¸Ğ³Ñ€Ñƒ Ğ´Ğ»Ñ Ğ¾Ğ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ¸ Game Over
				_return_to_game()
				return
		_show_error_animation(collected_total)

	# Ğ‘Ğ¾Ğ»ÑŒÑˆĞµ Ğ½Ğµ Ğ½ÑƒĞ¶ĞµĞ½ emit, Ğ´Ğ°Ğ½Ğ½Ñ‹Ğµ ÑƒĞ¶Ğµ Ğ² GameDataManager
	# payout_confirmed.emit(is_correct, collected_total, expected_payout)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ¿Ğ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ¸
func _on_hint_pressed():
	var is_survival = GameDataManager.is_survival_active
	var lives = GameDataManager.survival_lives

	# â† ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ° Ğ² Ñ€ĞµĞ¶Ğ¸Ğ¼Ğµ Ğ²Ñ‹Ğ¶Ğ¸Ğ²Ğ°Ğ½Ğ¸Ñ
	if is_survival:
		if lives <= 1:
			# ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½ÑÑ Ğ¶Ğ¸Ğ·Ğ½ÑŒ - Ğ¿Ğ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ° Ğ½ĞµĞ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ğ°
			EventBus.show_toast_error.emit("ĞŸĞ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ° Ğ½ĞµĞ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ğ°! (Ğ¾ÑÑ‚Ğ°Ğ»Ğ°ÑÑŒ Ğ¿Ğ¾ÑĞ»ĞµĞ´Ğ½ÑÑ Ğ¶Ğ¸Ğ·Ğ½ÑŒ)")
			return
		else:
			# ĞÑ‚Ğ½Ğ¸Ğ¼Ğ°ĞµĞ¼ Ğ¶Ğ¸Ğ·Ğ½ÑŒ
			GameDataManager.survival_lives -= 1
			_update_score_display()  # â† ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ Ğ¾Ñ‚Ğ¾Ğ±Ñ€Ğ°Ğ¶ĞµĞ½Ğ¸Ğµ Ğ¶Ğ¸Ğ·Ğ½ĞµĞ¹
			EventBus.show_toast_info.emit("ĞŸĞ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ° Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ° (-1 Ğ¶Ğ¸Ğ·Ğ½ÑŒ)")
	else:
		# ĞĞ±Ñ‹Ñ‡Ğ½Ñ‹Ğ¹ Ñ€ĞµĞ¶Ğ¸Ğ¼: -5 Ğ¾Ñ‡ĞºĞ¾Ğ²
		var current_score = SaveManager.instance.score
		if current_score < 5:
			# ĞĞµĞ´Ğ¾ÑÑ‚Ğ°Ñ‚Ğ¾Ñ‡Ğ½Ğ¾ Ğ¾Ñ‡ĞºĞ¾Ğ²
			EventBus.show_toast_error.emit("ĞŸĞ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ° Ğ½ĞµĞ´Ğ¾ÑÑ‚ÑƒĞ¿Ğ½Ğ°! (Ğ½ÑƒĞ¶Ğ½Ğ¾ Ğ¼Ğ¸Ğ½Ğ¸Ğ¼ÑƒĞ¼ 5 Ğ¾Ñ‡ĞºĞ¾Ğ², ĞµÑÑ‚ÑŒ %d)" % current_score)
			return

		var game_over = SaveManager.instance.subtract_score(5)
		StatsManager.instance.update_stats()
		_update_score_display()  # â† ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ Ğ¾Ñ‚Ğ¾Ğ±Ñ€Ğ°Ğ¶ĞµĞ½Ğ¸Ğµ Ğ¾Ñ‡ĞºĞ¾Ğ²

		if game_over:
			print("ğŸ® GAME OVER! ĞÑ‡ĞºĞ¸ ÑƒĞ¿Ğ°Ğ»Ğ¸ Ğ½Ğ¸Ğ¶Ğµ 0 Ğ¿Ğ¾ÑĞ»Ğµ Ğ¿Ğ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ¸")
			EventBus.show_toast_error.emit("GAME OVER! ĞÑ‡ĞºĞ¸ ÑƒĞ¿Ğ°Ğ»Ğ¸ Ğ½Ğ¸Ğ¶Ğµ 0")
			# Ğ¡Ğ¾Ñ…Ñ€Ğ°Ğ½ÑĞµĞ¼ Ñ‚ĞµĞºÑƒÑ‰Ğ¸Ğ¹ Ñ€ĞµĞ·ÑƒĞ»ÑŒÑ‚Ğ°Ñ‚ Ğ¸ Ğ²Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµĞ¼ÑÑ Ğ² Ğ¸Ğ³Ñ€Ñƒ
			GameDataManager.set_payout_result(false, 0.0, expected_payout)
			await get_tree().create_timer(2.0).timeout
			_return_to_game()
			return

		EventBus.show_toast_info.emit("ĞŸĞ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ° Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ° (-5 Ğ¾Ñ‡ĞºĞ¾Ğ²)")

	# ĞÑ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ Ñ‚ĞµĞºÑƒÑ‰Ğ¸Ğµ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	stack_manager.clear_all()

	# Ğ Ğ°ÑÑÑ‡Ğ¸Ñ‚Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ¾Ğ¿Ñ‚Ğ¸Ğ¼Ğ°Ğ»ÑŒĞ½Ğ¾Ğµ Ñ€Ğ°ÑĞ¿Ñ€ĞµĞ´ĞµĞ»ĞµĞ½Ğ¸Ğµ Ñ„Ğ¸ÑˆĞµĞº
	var hint = validator.calculate_hint(expected_payout, chip_denominations)

	# Ğ”Ğ¾Ğ±Ğ°Ğ²Ğ»ÑĞµĞ¼ Ñ„Ğ¸ÑˆĞºĞ¸ ÑĞ¾Ğ³Ğ»Ğ°ÑĞ½Ğ¾ Ğ¿Ğ¾Ğ´ÑĞºĞ°Ğ·ĞºĞµ
	for item in hint:
		var denomination = item["denomination"]
		var count = item["count"]

		for i in range(count):
			stack_manager.add_chip(denomination)

	# ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»
	hint_used.emit()
	print("ğŸ’¡ ĞŸĞ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ° Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ°! ĞĞ¶Ğ¸Ğ´Ğ°ĞµĞ¼Ğ°Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°: %s" % expected_payout)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº Ğ¸Ğ·Ğ¼ĞµĞ½ĞµĞ½Ğ¸Ñ Ñ€ĞµĞ¶Ğ¸Ğ¼Ğ° Ğ¸Ğ³Ñ€Ñ‹
func _on_mode_changed(_mode: String):
	_update_chip_denominations()
	_create_chip_buttons()
	stack_manager.clear_all()
	collected_amount_label.text = "0"

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞŸĞ Ğ˜Ğ’ĞĞ¢ĞĞ«Ğ• ĞœĞ•Ğ¢ĞĞ”Ğ« - ĞĞĞ¡Ğ¢Ğ ĞĞ™ĞšĞ UI
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _setup_styles():

	# === Ğ—ĞĞ“ĞĞ›ĞĞ’ĞĞš (ResultLabel) ===
	result_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_RESULT_LABEL)
	result_label.add_theme_color_override("font_outline_color", Color(0, 0, 0, 0.9))
	result_label.add_theme_constant_override("outline_size", 3)

	# === Ğ¡Ğ¢ĞĞ’ĞšĞ (StakeLabel) ===
	stake_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_STAKE_LABEL)
	stake_label.add_theme_color_override("font_color", Color(0.9, 0.8, 0.5))  # Ğ—Ğ¾Ğ»Ğ¾Ñ‚Ğ¸ÑÑ‚Ñ‹Ğ¹

	# === ĞŸĞĞĞ•Ğ›Ğ¬ Ğ¡Ğ£ĞœĞœĞ« (AmountPanel) ===
	var amount_style = StyleBoxFlat.new()
	amount_style.bg_color = GameConstants.AMOUNT_PANEL_BG_COLOR
	amount_style.border_width_left = 2
	amount_style.border_width_top = 2
	amount_style.border_width_right = 2
	amount_style.border_width_bottom = 2
	amount_style.border_color = GameConstants.AMOUNT_PANEL_BORDER_COLOR
	amount_style.corner_radius_top_left = 6
	amount_style.corner_radius_top_right = 6
	amount_style.corner_radius_bottom_left = 6
	amount_style.corner_radius_bottom_right = 6
	amount_panel.add_theme_stylebox_override("panel", amount_style)

	# Ğ§Ğ¸ÑĞ»Ğ¾ (ÑÑƒĞ¼Ğ¼Ğ° Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ñ‹)
	collected_amount_label.add_theme_font_size_override("font_size", 36)
	collected_amount_label.add_theme_color_override("font_color", Color(0.95, 0.95, 0.95))

	# === ĞšĞĞĞŸĞšĞ "Ğ’Ğ«ĞŸĞ›ĞĞ¢Ğ˜Ğ¢Ğ¬" (Ğ·ĞµĞ»ĞµĞ½Ğ°Ñ, ÑÑ€ĞºĞ°Ñ) ===
	payout_button.text = "Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ¸Ñ‚ÑŒ"
	payout_button.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_PAYOUT_BUTTON)

	var payout_style_normal = StyleBoxFlat.new()
	payout_style_normal.bg_color = Color(0.15, 0.6, 0.3)  # Ğ—ĞµĞ»Ñ‘Ğ½Ğ°Ñ
	payout_style_normal.border_width_left = 3
	payout_style_normal.border_width_top = 3
	payout_style_normal.border_width_right = 3
	payout_style_normal.border_width_bottom = 3
	payout_style_normal.border_color = Color(0.7, 0.5, 0.2)  # Ğ—Ğ¾Ğ»Ğ¾Ñ‚Ğ¸ÑÑ‚Ğ°Ñ Ñ€Ğ°Ğ¼ĞºĞ°
	payout_style_normal.corner_radius_top_left = 8
	payout_style_normal.corner_radius_top_right = 8
	payout_style_normal.corner_radius_bottom_left = 8
	payout_style_normal.corner_radius_bottom_right = 8
	payout_button.add_theme_stylebox_override("normal", payout_style_normal)

	var payout_style_hover = StyleBoxFlat.new()
	payout_style_hover.bg_color = Color(0.2, 0.7, 0.4)
	payout_style_hover.border_width_left = 3
	payout_style_hover.border_width_top = 3
	payout_style_hover.border_width_right = 3
	payout_style_hover.border_width_bottom = 3
	payout_style_hover.border_color = Color(0.8, 0.6, 0.3)
	payout_style_hover.corner_radius_top_left = 8
	payout_style_hover.corner_radius_top_right = 8
	payout_style_hover.corner_radius_bottom_left = 8
	payout_style_hover.corner_radius_bottom_right = 8
	payout_button.add_theme_stylebox_override("hover", payout_style_hover)

	payout_button.add_theme_color_override("font_color", Color(1, 1, 1))

	# === ĞšĞĞĞŸĞšĞ "?" (Ğ¿Ğ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ°) ===
	hint_button.text = "?"
	hint_button.add_theme_font_size_override("font_size", 28)

	var hint_style_normal = StyleBoxFlat.new()
	hint_style_normal.bg_color = Color(0.4, 0.3, 0.6)  # Ğ¤Ğ¸Ğ¾Ğ»ĞµÑ‚Ğ¾Ğ²Ñ‹Ğ¹
	hint_style_normal.border_width_left = 2
	hint_style_normal.border_width_top = 2
	hint_style_normal.border_width_right = 2
	hint_style_normal.border_width_bottom = 2
	hint_style_normal.border_color = Color(0.7, 0.5, 0.2)
	hint_style_normal.corner_radius_top_left = 8
	hint_style_normal.corner_radius_top_right = 8
	hint_style_normal.corner_radius_bottom_left = 8
	hint_style_normal.corner_radius_bottom_right = 8
	hint_button.add_theme_stylebox_override("normal", hint_style_normal)

	var hint_style_hover = StyleBoxFlat.new()
	hint_style_hover.bg_color = Color(0.5, 0.4, 0.7)
	hint_style_hover.border_width_left = 2
	hint_style_hover.border_width_top = 2
	hint_style_hover.border_width_right = 2
	hint_style_hover.border_width_bottom = 2
	hint_style_hover.border_color = Color(0.8, 0.6, 0.3)
	hint_style_hover.corner_radius_top_left = 8
	hint_style_hover.corner_radius_top_right = 8
	hint_style_hover.corner_radius_bottom_left = 8
	hint_style_hover.corner_radius_bottom_right = 8
	hint_button.add_theme_stylebox_override("hover", hint_style_hover)

	hint_button.add_theme_color_override("font_color", Color(1, 1, 1))

	# === Ğ“Ğ›ĞĞ’ĞĞĞ¯ ĞŸĞĞĞ•Ğ›Ğ¬ (MainPanel - ÑÑ‚Ğ¾Ğ¿ĞºĞ¸ Ñ„Ğ¸ÑˆĞµĞº) ===
	var main_style = StyleBoxFlat.new()
	main_style.bg_color = GameConstants.MAIN_PANEL_BG_COLOR
	main_style.border_width_left = 2
	main_style.border_width_top = 2
	main_style.border_width_right = 2
	main_style.border_width_bottom = 2
	main_style.border_color = GameConstants.MAIN_PANEL_BORDER_COLOR
	main_style.corner_radius_top_left = 8
	main_style.corner_radius_top_right = 8
	main_style.corner_radius_bottom_left = 8
	main_style.corner_radius_bottom_right = 8
	main_panel.add_theme_stylebox_override("panel", main_style)

	# Ğ Ğ°Ğ·Ğ¼ĞµÑ€Ñ‹ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€Ğ° ÑÑ‚Ğ¾Ğ¿Ğ¾Ğº
	chip_stacks_container.custom_minimum_size = Vector2(0, 240)  # â† Ğ£Ğ¼ĞµĞ½ÑŒÑˆĞ¸Ğ»Ğ¸ Ğ²Ñ‹ÑĞ¾Ñ‚Ñƒ Ñ 280 Ğ´Ğ¾ 240
	chip_stacks_container.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	chip_stacks_container.size_flags_vertical = Control.SIZE_SHRINK_BEGIN  # â† Ğ’Ñ‹Ñ€Ğ°Ğ²Ğ½Ğ¸Ğ²Ğ°Ğ½Ğ¸Ğµ Ğ¿Ğ¾ Ğ²ĞµÑ€Ñ…Ñƒ
	chip_stacks_container.add_theme_constant_override("separation", 5)  # â† Ğ£Ğ¼ĞµĞ½ÑŒÑˆĞ¸Ğ»Ğ¸ Ñ 10 Ğ´Ğ¾ 5

	# === ĞŸĞĞĞ•Ğ›Ğ¬ Ğ¤Ğ›ĞĞ¢Ğ (FleetPanel - ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ñ„Ğ¸ÑˆĞµĞº) ===
	var fleet_style = StyleBoxFlat.new()
	fleet_style.bg_color = GameConstants.FLEET_PANEL_BG_COLOR
	fleet_style.border_width_left = 2
	fleet_style.border_width_top = 2
	fleet_style.border_width_right = 2
	fleet_style.border_width_bottom = 2
	fleet_style.border_color = GameConstants.FLEET_PANEL_BORDER_COLOR
	fleet_style.corner_radius_top_left = 8
	fleet_style.corner_radius_top_right = 8
	fleet_style.corner_radius_bottom_left = 8
	fleet_style.corner_radius_bottom_right = 8
	fleet_panel.add_theme_stylebox_override("panel", fleet_style)

	# Ğ Ğ°Ğ·Ğ¼ĞµÑ€Ñ‹ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€Ğ° Ñ„Ğ»Ğ¾Ñ‚Ğ°
	chip_fleet_container.add_theme_constant_override("separation", 10)

# â† Ğ¡Ğ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ğµ ĞºĞ½Ğ¾Ğ¿Ğ¾Ğº Ğ´Ğ»Ñ ĞºĞ°Ğ¶Ğ´Ğ¾Ğ³Ğ¾ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ğ° Ñ„Ğ¸ÑˆĞºĞ¸
func _create_chip_buttons():
	# ĞÑ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€
	for child in chip_fleet_container.get_children():
		child.queue_free()

	for denomination in chip_denominations:
		var button = TextureButton.new()
		button.custom_minimum_size = GameConstants.CHIP_BUTTON_SIZE
		button.stretch_mode = TextureButton.STRETCH_KEEP_ASPECT_CENTERED

		# Ğ—Ğ°Ğ³Ñ€ÑƒĞ¶Ğ°ĞµĞ¼ Ñ‚ĞµĞºÑÑ‚ÑƒÑ€Ñƒ Ñ„Ğ¸ÑˆĞºĞ¸
		var denom_str = str(int(denomination)) if denomination >= 1 else str(denomination)
		var chip_path = GameConstants.CHIP_TEXTURE_PATH_TEMPLATE % denom_str
		var texture = load(chip_path)
		if texture:
			button.texture_normal = texture
		else:
			push_warning("PayoutPopupNew: Ñ‚ĞµĞºÑÑ‚ÑƒÑ€Ğ° Ğ½Ğµ Ğ½Ğ°Ğ¹Ğ´ĞµĞ½Ğ°: %s" % chip_path)

		# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹
		button.pressed.connect(_on_chip_clicked.bind(denomination))
		button.gui_input.connect(_on_chip_button_input.bind(denomination))

		chip_fleet_container.add_child(button)

# â† Ğ£ÑÑ‚Ğ°Ğ½Ğ¾Ğ²ĞºĞ° Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²ĞºĞ° Ñ Ñ†Ğ²ĞµÑ‚Ğ¾Ğ¼
func _set_result_header(winner: String):
	match winner:
		"Banker":
			result_label.text = Localization.t("WIN_BANKER")
			result_label.add_theme_color_override("font_color", Color(0.9, 0.2, 0.2))  # ĞšÑ€Ğ°ÑĞ½Ñ‹Ğ¹
		"Player":
			result_label.text = Localization.t("WIN_PLAYER")
			result_label.add_theme_color_override("font_color", Color(0.2, 0.4, 0.9))  # Ğ¡Ğ¸Ğ½Ğ¸Ğ¹
		"Tie":
			result_label.text = Localization.t("WIN_TIE")
			result_label.add_theme_color_override("font_color", Color(0.2, 0.9, 0.4))  # Ğ—ĞµĞ»Ñ‘Ğ½Ñ‹Ğ¹

# â† ĞĞ±Ğ½Ğ¾Ğ²Ğ¸Ñ‚ÑŒ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº Ğ¸Ğ· GameModeManager
func _update_chip_denominations():
	chip_denominations = GameModeManager.get_chip_denominations()
	print("PayoutPopupNew: ĞĞ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ñ‹: ", chip_denominations)

# â† Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ¸Ñ€Ğ¾Ğ²Ğ°Ğ½Ğ¸Ğµ Ñ‡Ğ¸ÑĞ»Ğ°
func _update_score_display():
	# ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ Ğ¾Ñ‚Ğ¾Ğ±Ñ€Ğ°Ğ¶ĞµĞ½Ğ¸Ğµ Ğ¾Ñ‡ĞºĞ¾Ğ² Ğ¸Ğ»Ğ¸ ÑĞµÑ€Ğ´ĞµÑ‡ĞµĞº
	var is_survival = GameDataManager.is_survival_active
	score_label.visible = true

	if is_survival:
		# Ğ ĞµĞ¶Ğ¸Ğ¼ Ğ²Ñ‹Ğ¶Ğ¸Ğ²Ğ°Ğ½Ğ¸Ñ: Ğ¿Ğ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ĞµĞ¼ ĞºĞ¾Ğ»Ğ¸Ñ‡ĞµÑÑ‚Ğ²Ğ¾ Ğ¶Ğ¸Ğ·Ğ½ĞµĞ¹
		var lives = GameDataManager.survival_lives
		score_label.text = "â™¥ %d" % lives
	else:
		# ĞĞ±Ñ‹Ñ‡Ğ½Ñ‹Ğ¹ Ñ€ĞµĞ¶Ğ¸Ğ¼: Ğ¿Ğ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ¾Ñ‡ĞºĞ¸
		var current_score = SaveManager.instance.score
		score_label.text = "ĞÑ‡ĞºĞ¸: %d" % current_score

func _format_amount(amount: float) -> String:
	if amount == floor(amount):
		return str(int(amount))
	else:
		return str(amount)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞĞĞ˜ĞœĞĞ¦Ğ˜Ğ˜
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _show_success_animation():
	# ĞŸĞ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ»Ğ¾ĞºĞ°Ğ»ÑŒĞ½Ñ‹Ğ¹ overlay Ğ²Ğ½ÑƒÑ‚Ñ€Ğ¸ ÑÑ†ĞµĞ½Ñ‹
	feedback_container.visible = true
	feedback_label.text = "Ğ’ĞµÑ€Ğ½Ğ¾!"
	feedback_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_RESULT_LABEL * 2)
	feedback_label.add_theme_color_override("font_color", Color(0.2, 0.9, 0.2))
	feedback_label.add_theme_color_override("font_outline_color", Color(0, 0, 0, 0.9))
	feedback_label.add_theme_constant_override("outline_size", 5)

	await get_tree().create_timer(GameConstants.SUCCESS_ANIMATION_DURATION).timeout
	feedback_container.visible = false
	feedback_label.text = ""

	# Ğ’Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµĞ¼ÑÑ Ğº Ğ¸Ğ³Ñ€Ğµ
	_return_to_game()

func _show_error_animation(collected: float):
	is_button_blocked = true
	payout_button.disabled = true

	# ĞŸĞ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ»Ğ¾ĞºĞ°Ğ»ÑŒĞ½Ñ‹Ğ¹ overlay Ğ²Ğ½ÑƒÑ‚Ñ€Ğ¸ Ğ¿Ğ¾Ğ¿Ğ°Ğ¿Ğ°
	feedback_container.visible = true
	feedback_label.text = "ĞÑˆĞ¸Ğ±ĞºĞ°!"
	feedback_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_RESULT_LABEL * 2)
	feedback_label.add_theme_color_override("font_color", Color(0.9, 0.2, 0.2))
	feedback_label.add_theme_color_override("font_outline_color", Color(0, 0, 0, 0.9))
	feedback_label.add_theme_constant_override("outline_size", 5)

	# ĞĞ½Ğ¸Ğ¼Ğ°Ñ†Ğ¸Ñ Ñ‚Ñ€ÑÑĞºĞ¸ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸
	var tween = create_tween()
	var original_pos = payout_button.position
	var shake = GameConstants.SHAKE_OFFSET
	var dur = GameConstants.SHAKE_DURATION
	tween.tween_property(payout_button, "position:x", original_pos.x + shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x - shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x + shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x - shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x, dur)

	await get_tree().create_timer(GameConstants.ERROR_ANIMATION_DURATION).timeout
	is_button_blocked = false
	payout_button.disabled = false
	feedback_container.visible = false
	feedback_label.text = ""

	# ĞĞ²Ñ‚Ğ¾Ğ¼Ğ°Ñ‚Ğ¸Ñ‡ĞµÑĞºĞ¸ Ğ¾Ñ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ Ğ²ÑĞµ Ñ„Ğ¸ÑˆĞºĞ¸
	stack_manager.clear_all()

	# ĞĞ• Ğ²Ğ¾Ğ·Ğ²Ñ€Ğ°Ñ‰Ğ°ĞµĞ¼ÑÑ Ğº Ğ¸Ğ³Ñ€Ğµ - Ğ´Ğ°Ñ‘Ğ¼ Ğ¸Ğ³Ñ€Ğ¾ĞºÑƒ Ğ¿Ğ¾Ğ¿Ñ€Ğ¾Ğ±Ğ¾Ğ²Ğ°Ñ‚ÑŒ ÑĞ½Ğ¾Ğ²Ğ°

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞĞĞ’Ğ˜Ğ“ĞĞ¦Ğ˜Ğ¯ ĞœĞ•Ğ–Ğ”Ğ£ Ğ¡Ğ¦Ğ•ĞĞĞœĞ˜
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _return_to_game():
	get_tree().change_scene_to_file("res://scenes/Game.tscn")

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞšĞ›ĞĞ’Ğ˜ĞĞ¢Ğ£Ğ ĞĞĞ¯ ĞĞĞ’Ğ˜Ğ“ĞĞ¦Ğ˜Ğ¯
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _setup_keyboard_navigation():
	# Ğ”Ğ¾Ğ±Ğ°Ğ²Ğ»ÑĞµĞ¼ Ñ€Ğ°Ğ¼ĞºÑƒ Ğ² ÑÑ†ĞµĞ½Ñƒ
	FocusManager.attach_highlight_to_scene(self)

	# Ğ£Ñ€Ğ¾Ğ²ĞµĞ½ÑŒ 1 (Ğ½Ğ¸Ğ¶Ğ½Ğ¸Ğ¹): Ğ¤Ğ»Ğ¾Ñ‚ Ñ„Ğ¸ÑˆĞµĞº
	var level1_elements = []
	for child in chip_fleet_container.get_children():
		if child is TextureButton:
			level1_elements.append(child)

	# Ğ£Ñ€Ğ¾Ğ²ĞµĞ½ÑŒ 2: Ğ¡Ñ‚Ğ¾Ğ¿ĞºĞ¸ Ñ„Ğ¸ÑˆĞµĞº (Ğ±ÑƒĞ´ÑƒÑ‚ Ğ´Ğ¾Ğ±Ğ°Ğ²Ğ»ÑÑ‚ÑŒÑÑ Ğ´Ğ¸Ğ½Ğ°Ğ¼Ğ¸Ñ‡ĞµÑĞºĞ¸)
	var level2_elements = []
	# ĞŸÑ€Ğ¾Ñ…Ğ¾Ğ´Ğ¸Ğ¼ Ğ¿Ğ¾ ÑĞ»Ğ¾Ñ‚Ğ°Ğ¼ Ğ¸ Ğ±ĞµÑ€ĞµĞ¼ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€Ñ‹ ÑÑ‚Ğ¾Ğ¿Ğ¾Ğº (ĞµÑĞ»Ğ¸ ĞµÑÑ‚ÑŒ)
	for slot in chip_stacks_container.get_children():
		if slot is VBoxContainer and slot.get_child_count() > 0:
			var stack_container = slot.get_child(0)
			if stack_container is PanelContainer:
				level2_elements.append(stack_container)

	# Ğ£Ñ€Ğ¾Ğ²ĞµĞ½ÑŒ 3 (Ğ²ĞµÑ€Ñ…Ğ½Ğ¸Ğ¹): Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ¸Ñ‚ÑŒ, ĞŸĞ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ°
	var level3_elements = [
		payout_button,
		hint_button
	]

	# Ğ ĞµĞ³Ğ¸ÑÑ‚Ñ€Ğ¸Ñ€ÑƒĞµĞ¼ ÑƒÑ€Ğ¾Ğ²Ğ½Ğ¸ (is_payout=true Ğ´Ğ»Ñ PayoutScene)
	FocusManager.register_level(1, level1_elements, true)
	FocusManager.register_level(2, level2_elements, true)
	FocusManager.register_level(3, level3_elements, true)

	# ĞŸĞ¾Ğ´Ğ¿Ğ¸ÑÑ‹Ğ²Ğ°ĞµĞ¼ÑÑ Ğ½Ğ° Ğ´Ğ¾Ğ±Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğµ/ÑƒĞ´Ğ°Ğ»ĞµĞ½Ğ¸Ğµ ÑÑ‚Ğ¾Ğ¿Ğ¾Ğº
	stack_manager.stack_added.connect(_on_stack_added_for_navigation)
	stack_manager.stack_removed.connect(_on_stack_removed_for_navigation)


func _on_stack_added_for_navigation(stack: ChipStack, _index: int):
	# ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ ÑƒÑ€Ğ¾Ğ²ĞµĞ½ÑŒ 2 Ğ¿Ñ€Ğ¸ Ğ´Ğ¾Ğ±Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğ¸ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	_update_navigation_level2()


func _on_stack_removed_for_navigation(stack: ChipStack, _index: int):
	# ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ ÑƒÑ€Ğ¾Ğ²ĞµĞ½ÑŒ 2 Ğ¿Ñ€Ğ¸ ÑƒĞ´Ğ°Ğ»ĞµĞ½Ğ¸Ğ¸ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	_update_navigation_level2()


func _update_navigation_level2():
	# ĞĞ±Ğ½Ğ¾Ğ²Ğ»ÑĞµĞ¼ ÑĞ¿Ğ¸ÑĞ¾Ğº ÑÑ‚Ğ¾Ğ¿Ğ¾Ğº Ğ´Ğ»Ñ Ğ½Ğ°Ğ²Ğ¸Ğ³Ğ°Ñ†Ğ¸Ğ¸
	var level2_elements = []
	# ĞŸÑ€Ğ¾Ñ…Ğ¾Ğ´Ğ¸Ğ¼ Ğ¿Ğ¾ ÑĞ»Ğ¾Ñ‚Ğ°Ğ¼ (VBoxContainer) Ğ¸ Ğ±ĞµÑ€ĞµĞ¼ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€Ñ‹ ÑÑ‚Ğ¾Ğ¿Ğ¾Ğº (PanelContainer)
	for slot in chip_stacks_container.get_children():
		if slot is VBoxContainer and slot.get_child_count() > 0:
			# Ğ’ ĞºĞ°Ğ¶Ğ´Ğ¾Ğ¼ ÑĞ»Ğ¾Ñ‚Ğµ Ğ¼Ğ¾Ğ¶ĞµÑ‚ Ğ±Ñ‹Ñ‚ÑŒ ÑÑ‚Ğ¾Ğ¿ĞºĞ° (stack.container)
			var stack_container = slot.get_child(0)
			if stack_container is PanelContainer:
				level2_elements.append(stack_container)
	FocusManager.register_level(2, level2_elements, true)
